# OpenBCSim

./: .gitignore  GPU Example 2 Plot.ipynb  OpenBCSim.sublime-project  README.md  build_steps_and_notes.txt  create_all_phantoms.py  plot_gpu_example_output.py  visualize_example_output.py
install/include/: BCSimConfig.hpp
jupyter/: Cyst Phantom from Field II.ipynb  GPU Example 2 Plot.ipynb  Investigating PyTorch for CUDA Interface.ipynb  Simple Planar Wave Simulation.ipynb  definitions.hpp  invoke_one.hpp  plot_cyst_phantom_from_field_ii.py  plot_gpu_example2.py  plot_gpu_example_line.py  projection_kernel.cu  projection_kernel_launcher.cpp  test.py  vector_functions_extended.hpp  visualize.py
jupyter/python_module/axpy/: build.cmd  setup.py
jupyter/python_module/etc/: example.cpp  help.txt
jupyter/python_module/openbcsim/: Simulation.py  Simulator.py  Testing Module.ipynb  Transducer.py  build.cmd  build.txt  cpp_time_kernel_launches.py  definitions.h  fast_build.py  nsight_stats.txt  openbcsim_kernel.cu  openbcsim_kernel.cuh  openbcsim_module.cpp  openbcsim_test.py  pretty_print.h  setup.py  sketch.py.tmp  tee.py  test.txt  time_kernel_launches.py  vector_functions_extended.hpp
notebooks/: Simple Planar Wave Simulation.ipynb
phantom_scripts/: carotid_bifurcation.py  contracting_cylinder_spline.py  cyst_phantom_2d.py  harmonic_box.py  lv_spline_model.py  realistic_artery.py  rotating_cube.py  rotating_plaque.py  simple.py  spinning_disc.py  spline_noise.py  splined_loader.py  tissue_with_flow.py  utils.py
python/: benchmark_paper.py  benchmark_results.txt  compare_cpu_gpu.py  demo1.py  demo_mmode_gpu_spline_vs_fixed.py  demo_multi_gpu.py  demo_pw_doppler.py  demo_rf.py  demo_tissue_doppler.py  gpu_demo1.py  linear_scan_phantom.py  perf_graph_fixed_gpu.py
pytorch_extension/axpy/: axpy_cuda.cpp  axpy_cuda_kernel.cu  axpy_test.py  build.txt  none_arg.cpp  test.txt  tried_build_commands.txt
pytorch_extension/etc/: cmake_help.txt  cpp_extension.py  experimental_commands.txt
pytorch_extension/openbcsim/: CMakeLists.txt  Preload.cmake  README.md  TODO.md  Transducer.py  base.h  cmake.cmd  cpp_time_kernel_launches.py  data_types.h  device_properties.cpp  device_properties.h  fast_build.py  openbcsim_kernel.cu  openbcsim_kernel.cuh  openbcsim_module.cpp  openbcsim_module.h  openbcsim_test.py  pretty_print.h  tee.py  test_openbcsim.cpp  utils.h
pytorch_extension/openbcsim/data/Field II/cyst_phantom/: export_rf_data.m.dont_use  make_image.m  mk_pht.m  pht_data.mat
pytorch_extension/openbcsim/include/: data_types.h  device_properties.h  export_macros.h  openbcsim_kernel.cuh  openbcsim_module.h  pretty_print.h  utils.h  vector_functions_extended.cuh
pytorch_extension/openbcsim/jupyter/: Testing Extension.ipynb
pytorch_extension/openbcsim/logs/: times.100k_scatterers.json  times.100k_scatterers.new.json  times.1M_scatterers.json  times.1k_to_2k.100k_scatterers.json  times.grid_stride_loop.100k_scatterers.json
pytorch_extension/openbcsim/scripts/: SET_RUNTIME_PATHS.bat  SET_RUNTIME_PATHS.sh  test_extension.py
pytorch_extension/openbcsim/src/: CMakeLists.txt  Simulator.py  Transducer.py  device_properties.cpp  mpl_utils.py  openbcsim_kernel.cu  openbcsim_kernel_v1.cu  openbcsim_module.cpp  test_openbcsim.cpp
src/: CMakeLists.txt
src/benchmark/: gpu_3d_texture_example.cu
src/core/: Aperture.hpp  BCSimConfig.hpp  BeamProfile.hpp  CMakeLists.txt  ScanSequence.cpp  ScanSequence.hpp  discrete_hilbert_mask.hpp  vector3.hpp
src/core/algorithm/: BaseAlgorithm.cpp  CpuAlgorithm.cpp  CpuAlgorithm.hpp  GpuAlgorithm.cpp  GpuAlgorithm.hpp  GpuScatterers.cpp  GpuScatterers.hpp  ProjectionAllAlgorithm.hpp  common_utils.hpp  cuda_helpers.h  cuda_kernels_c_interface.cu  cuda_kernels_c_interface.h  cuda_kernels_common.cu  cuda_kernels_common.cuh  cuda_kernels_fixed.cu  cuda_kernels_fixed.cuh  cuda_kernels_projection.cuh  cuda_kernels_projection_all.cu  cuda_kernels_projection_all.cuh  cuda_kernels_spline1.cu  cuda_kernels_spline1.cuh  cuda_kernels_spline2.cu
src/examples/: CMakeLists.txt  examples_common.hpp  gpu_example1.cpp  gpu_example2.cpp
src/python/: CMakeLists.txt  PythonInterface.cpp
src/qt5gui/: ScattererModel.cpp
src/utils/: CMakeLists.txt  GaussPulse.cpp  SignalProcessing.cpp
utilities/: CUDA_Occupancy_Calculator.xls  make_symlinks.py  result.deviceQuery.txt
